# agent-stack

./: .env.example  .gitignore  .mcp.json  AGENT_STACK_CTO_TECHNICAL_ANALYSIS.md  AGENT_STACK_CUSTOMER_PRESENTATION.md  AUDIT_FINDINGS.md  AUDIT_FINDINGS_DEEP_PHASED.md  AUDIT_VERIFICATION.md  CODE_AUDIT_REPORT.md  D1_STATUS.md  DEEP_ANALYSIS_REPORT.md  PLAN_01_BRIDGE.md  PLAN_02_GATEWAY.md  PLAN_03_CONSOLE.md  PLAN_04_EXTENSION.md  PLAN_05_USER_LAYER.md  PLAN_06_INFRA.md  PRODUCTION_GAP_ANALYSIS.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_TASK_PLAN.md  PROJECT_MAP.md  PROJE_DERIN_ANALIZ_VE_FAZ_PLANI.md  README.md  REMEDIATION_PLAN.md  check_braces.py  check_range.py  check_range_v2.py  docker-compose.unified.yml  find_unmatched.py  find_unmatched_v2.py  package-lock.json  package.json  plugin_end.txt  rebrand_sovereign_final.py  storage_end.txt  stress_omniview_elite.ts  stress_singularity_p10.ts  stress_singularity_p6.ts  temp_fix.py  test_genetic_deep_certification.ts  (+11 more)
core/bridge/: .env.example  Dockerfile  bridge.py  chaos_error.txt  config.py  debug_import.py  debug_trace.txt  dependencies.py  docker-compose.yml  error_trace.txt  error_trace2.txt  error_trace3.txt  error_trace4.txt  error_trace5.txt  error_trace6.txt  error_trace7.txt  metrics.py  pyproject.toml  pytest.ini  pytest_debug_phase8.txt  requirements.txt  rust_benchmark.txt  server.py  stub_bridge.py  test_results.txt
core/bridge/agent/: skill_manager.py  workflow_engine.py
core/bridge/alloy_compression/: caveman.py  llmlingua.py  semantic_pruner.py
core/bridge/cache/: exact.py  partial.py  semantic.py
core/bridge/cleaning/: cli_cleaner.py  dedup.py  noise_filter.py  summarizer.py  tool_output_dedup.py
core/bridge/compression/: caveman.py  llmlingua.py  semantic_pruner.py
core/bridge/models/: circuit_breaker.py  ollama.py  openrouter.py  provider_router.py
core/bridge/pipeline/: anthropic_cache.py  checkpoint.py  cost_tracker.py  decomposer.py  discovery_agent.py  (+9 more)
(+4437 files in other folders)
