[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-stack-mcp"
version = "1.0.0"
description = "Token optimization MCP server for Claude Code"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.4.22",
    "lancedb>=0.5.0",
    "pyarrow>=14.0.0",
    "llmlingua>=0.2.2",
    "spacy>=3.7.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.17.0",
    "scikit-learn>=1.3.2",
    "numpy>=1.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Empirical scripts (empirical_*.py) are standalone benchmarks, NOT collected by pytest.
# Run manually: python tests/empirical_chaos_integration.py
# Chaos and API tests require live bridge: pytest tests/test_bridge_api.py -m integration
collect_ignore_glob = ["tests/empirical_*.py", "tests/quantum_test_suite.py", "tests/deep_integration_test.py"]
markers = [
    "unit: fast unit tests",
    "integration: integration tests (require live bridge/Ollama)",
    "slow: slow tests",
    "chaos: chaos engineering tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E501"]
